changed scool select style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
                 </div>
             </div>
             <div class="modal__wrapper-info">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, repudiandae minima totam molestiae natus sequi itaque neque dignissimos. Aperiam inventore asperiores ad, repudiandae fugiat ducimus facilis ipsa obcaecati sequi expedita unde eos! Fuga neque quidem voluptatum itaque temporibus id, in quasi totam iusto sapiente non dolor incidunt, amet deleniti deserunt eius ipsa corporis reprehenderit numquam assumenda cum. Quis nisi fugit architecto itaque tenetur voluptate voluptatibus, saepe doloremque, excepturi corporis. Officiis recusandae ea ad magni esse maxime quidem voluptas obcaecati, aspernatur? Expedita enim alias, perferendis labore mollitia corrupti magni ducimus cum distinctio accusantium eius libero, eligendi iste sed atque recusandae inventore.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, repudiandae minima totam molestiae natus sequi itaque neque
+                dignissimos. Aperiam inventore asperiores ad, repudiandae fugiat ducimus facilis ipsa obcaecati sequi expedita
+                unde eos! Fuga neque quidem voluptatum itaque temporibus id, in quasi totam iusto sapiente non dolor incidunt,
+                amet deleniti deserunt eius ipsa corporis reprehenderit numquam assumenda cum. Quis nisi fugit architecto
+                itaque tenetur voluptate voluptatibus, saepe doloremque, excepturi corporis. Officiis recusandae ea ad magni
+                esse maxime quidem voluptas obcaecati, aspernatur? Expedita enim alias, perferendis labore mollitia corrupti
+                magni ducimus cum distinctio accusantium eius libero, eligendi iste sed atque recusandae inventore.
             </div>
         </div>
     </div>
@@ -34,7 +40,8 @@
                 </div>
             </div>
             <div class="modal__wrapper-info">
-                Окончил Самарский университет. Разрабатывает приложения для Android с 2010 года. В Яндексе — с 2012-го. Руководит разработкой мобильных клиентов Яндекс.Диска.
+                Окончил Самарский университет. Разрабатывает приложения для Android с 2010 года. В Яндексе — с 2012-го. Руководит разработкой
+                мобильных клиентов Яндекс.Диска.
             </div>
         </div>
     </div>
@@ -56,18 +63,18 @@
     </div>
     <header>
         <h1>Мобилизация</h1>
-    <nav>
-        <div class="school__category">
-            <input class="shri-category" type="radio" id="all" name="shri" value="shri_all"><label for="all" title="Школа разработки интерфейсов"
-                class="shri">Все</label>
-            <input class="shri-category" type="radio" id="shri" name="shri" value="shri"><label for="shri" title="Школа разработки интерфейсов"
-                class="shri">ШРИ</label>
-            <input class="shri-category" type="radio" name="shri" id="shmr" value="shmr"><label for="shmr" title="Школа мобильной разработки"
-                class="shmr">ШМР</label>
-            <input class="shri-category" type="radio" name="shri" id="shmd" value="shmd"><label for="shmd" title="Школа мобильного дизайна"
-                class="shmd">ШМД</label>
-        </div>
-    </nav>
+        <nav>
+            <div class="school__category">
+                <input class="shri-category" type="radio" id="all" name="shri" value="shri_all"><label for="all" title="Школа разработки интерфейсов"
+                    class="shri">Все</label>
+                <input class="shri-category" type="radio" id="shri" name="shri" value="shri"><label for="shri" title="Школа разработки интерфейсов"
+                    class="shri">ШРИ</label>
+                <input class="shri-category" type="radio" name="shri" id="shmr" value="shmr"><label for="shmr" title="Школа мобильной разработки"
+                    class="shmr">ШМР</label>
+                <input class="shri-category" type="radio" name="shri" id="shmd" value="shmd"><label for="shmd" title="Школа мобильного дизайна"
+                    class="shmd">ШМД</label>
+            </div>
+        </nav>
     </header>
     <div id="app">
         <article class="lecture lecture-done" data-school="shri">
@@ -84,7 +91,7 @@
                 <div class="school"><span title="Школа разработки интерфейсов" class="shri">ШРИ</span></div>
                 <a href="#dushkin" class="speaker">Дмитрий Душкин</a>
             </div>
-                <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
         </article>
         <article class="lecture lecture-done" data-school="shri">
             <div class="lecture__place">
@@ -193,7 +200,7 @@
                 <div class="speaker">Прокопюк Андрей</div>
             </div>
         </article>
-        <article class="lecture lecture-done"  data-school="shmr">
+        <article class="lecture lecture-done" data-school="shmr">
             <div class="lecture__place">
                 <div class="lecture__place-datetime">
                     <span class="lecture__place-day">19</span>
