--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="build/style.css" rel="stylesheet">
+    <!--<link href="build/style.css" rel="stylesheet">-->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
