Кнопка просмотра полностью активная

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="school"><span title="Школа разработки интерфейсов" class="shri">ШРИ</span></div>
                 <a href="#dushkin" class="speaker">Дмитрий Душкин</a>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shri">
             <div class="lecture__place">
@@ -107,7 +107,7 @@
                 <div class="school"><span title="Школа разработки интерфейсов" class="shri">ШРИ</span></div>
                 <a href="#dushkin" class="speaker">Дмитрий Душкин</a>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture" data-school="shri">
             <div class="lecture__place">
@@ -214,7 +214,7 @@
                 <div class="school"><span title="Школа мобильной разработки" class="shmr">ШМР</span></div>
                 <div class="speaker">Эдуард Мацуков</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shmr">
             <div class="lecture__place">
@@ -230,7 +230,7 @@
                 <div class="school"><span title="Школа мобильной разработки" class="shmr">ШМР</span></div>
                 <div class="speaker">Складной Дмитрий</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shmr">
             <div class="lecture__place">
@@ -246,7 +246,7 @@
                 <div class="school"><span title="Школа мобильной разработки" class="shmr">ШМР</span></div>
                 <div class="speaker">Мацуков Эдуард</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shmr">
             <div class="lecture__place">
@@ -262,7 +262,7 @@
                 <div class="school"><span title="Школа мобильной разработки" class="shmr">ШМР</span></div>
                 <a href="#grigoriyev" class="speaker">Григорьев Роман</a>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture" data-school="shmr">
             <div class="lecture__place">
@@ -458,7 +458,7 @@
                 <div class="school"><span title="Школа мобильного дизайна" class="shmd">ШМД</span></div>
                 <div class="speaker">Антон Тен</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shmd">
             <div class="lecture__place">
@@ -474,7 +474,7 @@
                 <div class="school"><span title="Школа мобильного дизайна" class="shmd">ШМД</span></div>
                 <div class="speaker">Антон Тен</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture lecture-done" data-school="shmd">
             <div class="lecture__place">
@@ -490,7 +490,7 @@
                 <div class="school"><span title="Школа мобильного дизайна" class="shmd">ШМД</span></div>
                 <div class="speaker">Васюнин Николай</div>
             </div>
-            <div class="lecture__content-button"><a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a></div>
+            <a class="button__link" href="#youtube"><span class="button__text">Смотреть</span><span class="button__icon"></span></a>
         </article>
         <article class="lecture" data-school="shmd">
             <div class="lecture__place">
