improves and features

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/normalize.css" rel="stylesheet">
     <!--<link href="build/style.css" rel="stylesheet">-->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="build/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -664,9 +664,9 @@
         <article class="lecture" data-school="shmd, shmr,shri">
             <div class="lecture__place">
                 <div class="lecture__place-datetime">
-                    <span class="lecture__place-day">13</span>
+                    <span class="lecture__place-day">15</span>
                     <span class="lecture__place-month">Дек</span>
-                    <span class="lecture__place-time">18:00</span>
+                    <span class="lecture__place-time">12:00</span>
                 </div>
                 <div class="lecture__place-classroom">205</div>
             </div>
@@ -683,9 +683,9 @@
         <article class="lecture" data-school="shmd, shmr,shri">
             <div class="lecture__place">
                 <div class="lecture__place-datetime">
-                    <span class="lecture__place-day">13</span>
+                    <span class="lecture__place-day">17</span>
                     <span class="lecture__place-month">Дек</span>
-                    <span class="lecture__place-time">18:00</span>
+                    <span class="lecture__place-time">12:00</span>
                 </div>
                 <div class="lecture__place-classroom">205</div>
             </div>
