--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <nav>
             <div class="school__category">
                 <input class="shri-category" type="radio" id="all" name="shri" value="shri_all"><label for="all" title="Школа разработки интерфейсов"
-                    class="shri">Все</label>
+                    class="shri">Все школы</label>
                 <input class="shri-category" type="radio" id="shri" name="shri" value="shri"><label for="shri" title="Школа разработки интерфейсов"
                     class="shri">ШРИ</label>
                 <input class="shri-category" type="radio" name="shri" id="shmr" value="shmr"><label for="shmr" title="Школа мобильной разработки"
