--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1>Мобилизация</h1>
         <nav>
             <div class="school__category">
-                <input class="shri-category" type="radio" id="all" name="shri" value="shri_all"><label for="all" title="Школа разработки интерфейсов"
+                <input class="shri-category" type="radio" id="all" name="shri" value="shri_all"><label for="all" title="Все школы"
                     class="shri">Все школы</label>
                 <input class="shri-category" type="radio" id="shri" name="shri" value="shri"><label for="shri" title="Школа разработки интерфейсов"
                     class="shri">ШРИ</label>
