--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="ru">
 
 <head>
-    <title></title>
+    <title>Мобилизация</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="build/normalize.css" rel="stylesheet">
